--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 /exported-journals/
 /workspace/
 /project/target/
-project\.settings\
-project\.classpath
-project\.project
+/project/.settings/
+/project/.classpath
+/project/.project
